# ETL-Atendimentos-Hospital

./: README.md  pyproject.toml
dados/: dados.xlsx  dashboard.pbix  date_extract.csv  date_transform.xlsx
src/kpis_hsp/: extract.py  transform.py
